--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,9 @@ add_executable(2task 2task.cpp)
 
 project(3task)
 add_executable(3task 3task.cpp)
+
+project(4task)
+add_executable(4task 4task.cpp)
+
+project(5task)
+add_executable(5task 5task.cpp)
