--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,9 @@ set(CMAKE_CXX_STANDARD 17)
 
 project(1task)
 add_executable(1task 1task.cpp)
+
+project(2task)
+add_executable(2task 2task.cpp)
+
+project(3task)
+add_executable(3task 3task.cpp)
