3rd - second iteration, 4th - first; add seminars

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,6 @@ add_executable(2task 2task.cpp)
 
 project(3task)
 add_executable(3task 3task.cpp)
+
+project(4task)
+add_executable(4task 4task.cpp)
