--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,9 @@ add_subdirectory(1task)
 
 project(2task)
 add_executable(2task 2task.cpp)
+
+project(3task)
+add_executable(3task 3task.cpp)
+
+project(4task)
+add_executable(4task 4task.cpp)
